Moved user facing messages to en file

--- a/client/search.html
+++ b/client/search.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Search</title>
-    </head>
+    <title id="title"></title>
+</head>
 <body>
-
-    <textarea id="search" rows="4" cols="50">
-    </textarea>
-
-    <button id="button">Search</button>
+    <textarea id="search" rows="4" cols="50"></textarea>
+    <button id="button"></button>
     <div id="content"></div>
-
-
+    <script src="./lang/en.js"></script>
+    <script src="./js/search.js"></script>
 </body>
-<script src="./js/search.js"></script>
 </html>
