--- a/client/store.html
+++ b/client/store.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Store</title>
+    <title id="title"></title>
     </head>
 
 <body>
-    
-        <textarea id="word" rows="4" cols="50">
-        </textarea>
-        <textarea id="definition" rows="4" cols="50">
-            </textarea>
-    
-        <button id="button">Submit</button>
-        <div id="content"></div>
+    <textarea id="word" rows="4" cols="50"></textarea>
+    <textarea id="definition" rows="4" cols="50"></textarea>
+    <button id="button"></button>
+    <script src="./lang/en.js"></script>
+    <script src="./js/search.js"></script>
 </body>
-<script src="./js/store.js"></script>
 </html>
