Updated textarea on store page

--- a/client/store.html
+++ b/client/store.html
@@ -5,11 +5,10 @@
     </head>
 
 <body>
-    
-        <textarea id="word" rows="4" cols="50">
-        </textarea>
-        <textarea id="definition" rows="4" cols="50">
-            </textarea>
+        <p>Word</p>
+        <textarea id="word" rows="4" cols="50"></textarea>
+        <p>Definition</p>
+        <textarea id="definition" rows="4" cols="50"></textarea>
     
         <button id="button">Submit</button>
         <div id="content"></div>
