--- a/client/store.html
+++ b/client/store.html
@@ -14,6 +14,6 @@
         <div id="content"></div>
    
     <script src="./lang/en.js"></script>
-    <script src="./js/search.js"></script>
+    <script src="./js/store.js"></script>
 </body>
 </html>
